<resources>
    <string name="app_name">Sportrack</string>
    <string name="mulai">Start</string>
    <string name="potensi_kalori_terbakar">Calory burned potential</string>
    <string name="mulai_berolahraga">Start working out</string>
    <string name="pilih_olahraga">Choose sport</string>
    <string name="start_stopwatch">Start</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="no_news">No news</string>
    <string name="news_image_desc">News Image</string>
    <string name="news_image">news image</string>
    <string name="str_test_date">22/02/2017</string>

    <string name="show_camera">Show camera preview</string>
    <string name="camera_unavailable"><b>Camera could not be opened.</b>\nThis occurs when the camera is not available (for example it is already in use) or if the system has denied access (for example when camera access has been disabled).</string>
    <string name="intro">In this submenu, you can take photo of your workout\nClick the button below to request the Camera permission and open a full-screen camera preview.</string>
    <string name="open_camera_preview">Open Camera Preview</string>
    <string name="intro_message">Post workout photo</string>
    <string name="camera_access_required">Camera access is required to take picture of your post workout photo.</string>
    <string name="ok">OK</string>
    <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
    <string name="camera_permission_available">Camera permission is available. Starting preview.</string>
    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>
    <string name="camera">Camera</string>
    <string name="is_connected">No signal received, please wait until connected to internet</string>
    <string name="refresh">Refresh</string>
</resources>