<?xml version="1.0" encoding="utf-8"?>
<!--
  Designed and developed by 2020 skydoves (Jaewoong Eum)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="id.ac.ui.cs.mobileprogramming.mrizkyanditama.sportrack.ui.new_exercise.NewExerciseViewModel" />

        <variable
            name="adapter"
            type="id.ac.ui.cs.mobileprogramming.mrizkyanditama.sportrack.ui.adapter.SportTypeAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        toast="@{vm.toastLiveData}"
        android:clipToPadding="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/main_toolbar"
                layout="@layout/toolbar_home" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_sporttype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadeScrollbars="true"
            android:orientation="horizontal"
            android:padding="6dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@drawable/scrollbar"
            android:scrollbars="horizontal"
            app:adapterSportType="@{adapter}"
            app:adapterSportTypeList="@{vm.sportTypeListLiveData}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.249"
            tools:listitem="@layout/item_sporttype" />

        <TextView
            android:id="@+id/mulai_berolahraga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="337dp"
            android:text="@string/mulai_berolahraga"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/list_sporttype"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintVertical_bias="0.512" />

        <TextView
            android:id="@+id/pilih_olahraga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="337dp"
            android:text="@string/pilih_olahraga"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/list_sporttype"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pilih_olahraga"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/potensi_kalori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/potensi_kalori_terbakar"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_sporttype" />

        <Button
            android:id="@+id/button_new_exercise"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/mulai"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/potensi_kalori_number"
            app:layout_constraintVertical_bias="0.912"
            android:onClick="@{() -> vm.onMulaiClick()}"
            />

        <TextView
            android:id="@+id/potensi_kalori_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.computedCaloriesLiveData}"
            android:layout_marginTop="68dp"
            tools:text="1300 kalori per menit"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_sporttype" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>